remove lorem for advice

--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
 
   <div class="container-advice">
     <h2 class="advice">
-      Advice # <span id="advice-id">0</span><!-- Advice ID goes here -->
+      Advice # <span id="advice-id"></span><!-- Advice ID goes here -->
     </h2>
 
     <p class="advice-text">
-      "Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, quae itaque similique impedit."
     </p>
 
     <img class="divider" src="./images/pattern-divider-mobile.svg" alt="divider">
